Make it somewhat more compilable

--- a/app/src/main/res/layout/newsstand_debug_layout.xml
+++ b/app/src/main/res/layout/newsstand_debug_layout.xml
@@ -1,11 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout android:orientation="1" android:layout_width="-1" android:layout_height="-1">
-    <TextView android:id="@id/newsstanddebuglayoutTextView1" android:padding="15dp" android:layout_width="-2" android:layout_height="-2" android:text="To Enable:
-Open Newsstand.
-Go to Settings. (In the slide-out menu.)
-Tap the Version number at the bottom of the list 5 times until 'Designer Mode' appears beneath it.
-You're done!" />
-    <TextView android:padding="15dp" android:layout_width="-2" android:layout_height="-2" android:text="To Disable:
-Clear app data.
-You're done!" android:layout_below="@id/newsstanddebuglayoutTextView1" />
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
+    android:layout_height="fill_parent"
+    android:layout_width="fill_parent">
+    <TextView
+        android:id="@id/newsstanddebuglayoutTextView1"
+        android:padding="15dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="To Enable:
+            Open Newsstand.
+            Go to Settings. (In the slide-out menu.)
+            Tap the Version number at the bottom of the list 5 times until 'Designer Mode' appears beneath it.
+            You're done!" />
+    <TextView
+        android:padding="15dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="To Disable:
+            Clear app data.
+            You're done!"
+        android:layout_below="@id/newsstanddebuglayoutTextView1" />
 </RelativeLayout>
