--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -1,38 +1,258 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android">
-    <RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent">
-        <TextView android:textAppearance="?android:attr/textAppearanceLarge" android:id="@id/gpsdb" android:padding="15dp" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="Google Play Store Debugging" android:layout_alignParentLeft="true" />
+    android:layout_height="fill_parent">
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <TextView
+            android:id="@id/gpsdb"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:padding="15dp"
+            android:text="@string/google_play_store_debugging"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
         <!-- <View android:id="@id/layout1View1" android:background="?unknown_attr_ref: 101032c" android:layout_width="1dp" android:layout_height="match_parent" android:alpha="0.0" android:layout_toEndOf="@id/gpsdb" /> -->
-        <ToggleButton android:id="@id/FinskyDebugToggle" android:layout_width="fill_parent" android:layout_height="fill_parent" android:textOn="Enabled" android:textOff="Disabled" android:layout_alignBottom="@id/gpsdb" android:layout_alignParentRight="true" android:layout_toEndOf="@id/layout1View1" />
-        <TextView android:textAppearance="?android:attr/textAppearanceLarge" android:id="@id/gpsd2b" android:padding="15dp" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="Google Play Store DCB Debug" android:layout_below="@id/FinskyDebugToggle" android:layout_alignParentLeft="true" />
+        <ToggleButton
+            android:id="@id/FinskyDebugToggle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@id/gpsdb"
+            android:layout_alignParentRight="true"
+            android:layout_toEndOf="@id/layout1View1"
+            android:textOff="Disabled"
+            android:textOn="Enabled" />
+
+        <TextView
+            android:id="@id/gpsd2b"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_alignParentLeft="true"
+            android:layout_below="@id/FinskyDebugToggle"
+            android:padding="15dp"
+            android:text="@string/google_play_store_dcb_debug"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
         <!-- <View android:id="@id/layout1View1" android:background="?unknown_attr_ref: 101032c" android:layout_width="1dp" android:layout_height="match_parent" android:alpha="0.0" android:layout_toEndOf="@id/gpsd2b" /> -->
-        <ToggleButton android:id="@id/FinskyDebug2Toggle" android:layout_width="fill_parent" android:layout_height="fill_parent" android:textOn="Enabled" android:textOff="Disabled" android:layout_alignBottom="@id/gpsd2b" android:layout_alignParentRight="true" android:layout_toEndOf="@id/layout1View1" />
-        <View android:background="?android:attr/dividerVertical" android:layout_width="match_parent" android:layout_height="1dp" android:layout_below="@id/gpsd2b" />
-        <TextView android:textAppearance="?android:attr/textAppearanceLarge" android:id="@id/layout1TextView1" android:padding="15dp" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="Hangouts Debugging" android:layout_below="@id/gpsd2b" android:layout_alignParentLeft="true" android:layout_toStartOf="@id/layout1View1" />
-        <ToggleButton android:id="@id/BabelDebugToggle" android:layout_width="fill_parent" android:layout_height="fill_parent" android:textOn="Enabled" android:textOff="Disabled" android:layout_below="@id/FinskyDebug2Toggle" android:layout_alignBottom="@id/layout1TextView1" android:layout_alignParentRight="true" android:layout_toEndOf="@id/layout1View1" />
-        <TextView android:textAppearance="?android:attr/textAppearanceLarge" android:id="@id/babelgvtv" android:padding="15dp" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="Hangouts GV SMS" android:layout_below="@id/layout1TextView1" android:layout_alignParentLeft="true" android:layout_toStartOf="@id/layout1View1" />
-        <ToggleButton android:id="@id/BabelGVToggle" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:textOn="Enabled" android:textOff="Disabled" android:layout_below="@id/BabelDebugToggle" android:layout_alignBottom="@id/babelgvtv" android:layout_alignParentRight="true" android:layout_toEndOf="@id/layout1View1" />
-        <View android:background="?android:attr/dividerVertical" android:visibility="gone" android:layout_width="match_parent" android:layout_height="1dp" android:layout_below="@id/babelgvtv" />
-        <TextView android:textAppearance="?android:attr/textAppearanceLarge" android:id="@id/layout1TextView2" android:padding="15dp" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="Play Music Debugging" android:layout_below="@id/babelgvtv" android:layout_alignParentLeft="true" android:layout_toStartOf="@id/layout1View1" />
-        <ToggleButton android:id="@id/MusicDebugToggle" android:layout_width="fill_parent" android:layout_height="fill_parent" android:textOn="Enabled" android:textOff="Disabled" android:layout_below="@id/BabelGVToggle" android:layout_alignBottom="@id/layout1TextView2" android:layout_alignParentRight="true" android:layout_toEndOf="@id/layout1View1" />
-        <View android:background="?android:attr/dividerVertical" android:layout_width="match_parent" android:layout_height="1dp" android:layout_below="@id/layout1TextView2" />
-        <View android:background="?android:attr/dividerVertical" android:layout_width="match_parent" android:layout_height="1dp" android:layout_below="@id/gpsdb" />
-        <View android:background="?android:attr/dividerVertical" android:layout_width="match_parent" android:layout_height="1dp" android:layout_below="@id/layout1TextView1" />
-        <TextView android:textAppearance="?android:attr/textAppearanceLarge" android:id="@id/GamesDogfoodTV" android:padding="15dp" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="Play Games Dogfood" android:layout_below="@id/layout1TextView2" android:layout_alignParentLeft="true" android:layout_toStartOf="@id/layout1View1" />
-        <ToggleButton android:id="@id/GamesDogfoodToggle" android:layout_width="fill_parent" android:layout_height="fill_parent" android:textOn="Enabled" android:textOff="Disabled" android:layout_below="@id/MusicDebugToggle" android:layout_alignBottom="@id/GamesDogfoodTV" android:layout_alignParentRight="true" android:layout_toEndOf="@id/layout1View1" />
-        <View android:background="?android:attr/dividerVertical" android:layout_width="match_parent" android:layout_height="1dp" android:layout_below="@id/GamesDogfoodTV" />
-        <TextView android:textAppearance="?android:attr/textAppearanceLarge" android:id="@id/MoviesDogfoodTV" android:padding="15dp" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="Play Movies Dogfood" android:layout_below="@id/GamesDogfoodTV" android:layout_alignParentLeft="true" android:layout_toStartOf="@id/layout1View1" />
-        <ToggleButton android:id="@id/MoviesDogfoodToggle" android:layout_width="fill_parent" android:layout_height="fill_parent" android:textOn="Enabled" android:textOff="Disabled" android:layout_below="@id/GamesDogfoodToggle" android:layout_alignBottom="@id/MoviesDogfoodTV" android:layout_alignParentRight="true" android:layout_toEndOf="@id/layout1View1" />
-        <View android:background="?android:attr/dividerVertical" android:layout_width="match_parent" android:layout_height="1dp" android:layout_below="@id/MoviesDogfoodTV" />
-        <TextView android:textAppearance="?android:attr/textAppearanceLarge" android:id="@id/layout1TextView3" android:padding="15dp" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="Play Books Debugging" android:layout_below="@id/MoviesDogfoodTV" android:layout_alignParentLeft="true" android:layout_toStartOf="@id/layout1View1" />
-        <ToggleButton android:id="@id/BooksDebugToggle" android:layout_width="fill_parent" android:layout_height="fill_parent" android:textOn="Enabled" android:textOff="Disabled" android:layout_below="@id/MoviesDogfoodToggle" android:layout_alignBottom="@id/layout1TextView3" android:layout_alignParentRight="true" android:layout_toEndOf="@id/layout1View1" />
-        <View android:id="@id/mainView1" android:background="?android:attr/dividerVertical" android:layout_width="match_parent" android:layout_height="1dp" android:layout_below="@id/layout1TextView3" />
-        <Button android:id="@id/newsstandButton" android:layout_width="match_parent" android:layout_height="fill_parent" android:text="Newsstand Debugging" android:layout_below="@id/mainView1" />
-        <View android:id="@id/newsstandDivider" android:background="?android:attr/dividerVertical" android:layout_width="match_parent" android:layout_height="1dp" android:layout_below="@id/newsstandButton" />
-        <TextView android:textAppearance="?android:attr/textAppearanceLarge" android:id="@id/mainTextView1" android:padding="15dp" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="This app was made in my free time, if you like it, please donate to me!
- - r3pwn" android:layout_below="@id/newsstandDivider" />
+        <ToggleButton
+            android:id="@id/FinskyDebug2Toggle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@id/gpsd2b"
+            android:layout_alignParentRight="true"
+            android:layout_toEndOf="@id/layout1View1"
+            android:textOff="Disabled"
+            android:textOn="Enabled" />
+
+        <View
+            android:layout_width="wrap_content"
+            android:layout_height="1dp"
+            android:layout_below="@id/gpsd2b"
+            android:background="?android:attr/dividerVertical" />
+
+        <TextView
+            android:id="@id/layout1TextView1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_below="@id/gpsd2b"
+            android:layout_toStartOf="@id/layout1View1"
+            android:padding="15dp"
+            android:text="@string/hangouts_debugging"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
+
+        <ToggleButton
+            android:id="@id/BabelDebugToggle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@id/layout1TextView1"
+            android:layout_alignParentRight="true"
+            android:layout_below="@id/FinskyDebug2Toggle"
+            android:layout_toEndOf="@id/layout1View1"
+            android:textOff="Disabled"
+            android:textOn="Enabled" />
+
+        <TextView
+            android:id="@id/babelgvtv"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentLeft="true"
+            android:layout_below="@id/layout1TextView1"
+            android:layout_toStartOf="@id/layout1View1"
+            android:padding="15dp"
+            android:text="@string/hangouts_gv_sms"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:visibility="gone" />
+
+        <ToggleButton
+            android:id="@id/BabelGVToggle"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignBottom="@id/babelgvtv"
+            android:layout_alignParentRight="true"
+            android:layout_below="@id/BabelDebugToggle"
+            android:layout_toEndOf="@id/layout1View1"
+            android:textOff="Disabled"
+            android:textOn="Enabled"
+            android:visibility="gone" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_below="@id/babelgvtv"
+            android:background="?android:attr/dividerVertical"
+            android:visibility="gone" />
+
+        <TextView
+            android:id="@id/layout1TextView2"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_alignParentLeft="true"
+            android:layout_below="@id/babelgvtv"
+            android:layout_toStartOf="@id/layout1View1"
+            android:padding="15dp"
+            android:text="@string/play_music_debugging"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
+
+        <ToggleButton
+            android:id="@id/MusicDebugToggle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@id/layout1TextView2"
+            android:layout_alignParentRight="true"
+            android:layout_below="@id/BabelGVToggle"
+            android:layout_toEndOf="@id/layout1View1"
+            android:textOff="Disabled"
+            android:textOn="Enabled" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_below="@id/layout1TextView2"
+            android:background="?android:attr/dividerVertical" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_below="@id/gpsdb"
+            android:background="?android:attr/dividerVertical" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_below="@id/layout1TextView1"
+            android:background="?android:attr/dividerVertical" />
+
+        <TextView
+            android:id="@id/GamesDogfoodTV"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_alignParentLeft="true"
+            android:layout_below="@id/layout1TextView2"
+            android:layout_toStartOf="@id/layout1View1"
+            android:padding="15dp"
+            android:text="@string/play_games_dogfood"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
+
+        <ToggleButton
+            android:id="@id/GamesDogfoodToggle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@id/GamesDogfoodTV"
+            android:layout_alignParentRight="true"
+            android:layout_below="@id/MusicDebugToggle"
+            android:layout_toEndOf="@id/layout1View1"
+            android:textOff="Disabled"
+            android:textOn="Enabled" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_below="@id/GamesDogfoodTV"
+            android:background="?android:attr/dividerVertical" />
+
+        <TextView
+            android:id="@id/MoviesDogfoodTV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_below="@id/GamesDogfoodTV"
+            android:layout_toStartOf="@id/layout1View1"
+            android:padding="15dp"
+            android:text="@string/play_movies_dogfood"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:visibility="visible" />
+
+        <ToggleButton
+            android:id="@id/MoviesDogfoodToggle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@id/MoviesDogfoodTV"
+            android:layout_alignParentRight="true"
+            android:layout_below="@id/GamesDogfoodToggle"
+            android:layout_toEndOf="@id/layout1View1"
+            android:textOff="Disabled"
+            android:textOn="Enabled" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_below="@id/MoviesDogfoodTV"
+            android:background="?android:attr/dividerVertical" />
+
+        <TextView
+            android:id="@id/layout1TextView3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_below="@id/MoviesDogfoodTV"
+            android:layout_toStartOf="@id/layout1View1"
+            android:padding="15dp"
+            android:text="@string/play_books_debugging"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
+
+        <ToggleButton
+            android:id="@id/BooksDebugToggle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@id/layout1TextView3"
+            android:layout_alignParentRight="true"
+            android:layout_below="@id/MoviesDogfoodToggle"
+            android:layout_toEndOf="@id/layout1View1"
+            android:textOff="Disabled"
+            android:textOn="Enabled" />
+
+        <View
+            android:id="@+id/mainView1"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_below="@id/layout1TextView3"
+            android:background="?android:attr/dividerVertical" />
+
+        <Button
+            android:id="@id/newsstandButton"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_below="@id/mainView1"
+            android:text="Newsstand Debugging" />
+
+        <View
+            android:id="@id/newsstandDivider"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_below="@id/newsstandButton"
+            android:background="?android:attr/dividerVertical"
+            android:visibility="visible" />
+
+        <TextView
+            android:id="@+id/mainTextView1"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_below="@id/newsstandDivider"
+            android:padding="15dp"
+            android:text="This app was made in my free time, if you like it, please donate to me!\n\n - r3pwn"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
     </RelativeLayout>
 </ScrollView>
