--- a/app/src/main/res/layout/newsstand_debug_layout.xml
+++ b/app/src/main/res/layout/newsstand_debug_layout.xml
@@ -9,17 +9,17 @@
         android:padding="15dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="To Enable:
-            Open Newsstand.
-            Go to Settings. (In the slide-out menu.)
-            Tap the Version number at the bottom of the list 5 times until 'Designer Mode' appears beneath it.
+        android:text="To Enable:\n
+            Open Newsstand.\n
+            Go to Settings. (In the slide-out menu.)\n
+            Tap the Version number at the bottom of the list 5 times until 'Designer Mode' appears beneath it.\n
             You're done!" />
     <TextView
         android:padding="15dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="To Disable:
-            Clear app data.
-            You're done!"
+        android:text="To Disable:\n
+            Clear app data.\n
+            Newsstand debugging is now disabled!"
         android:layout_below="@id/newsstanddebuglayoutTextView1" />
 </RelativeLayout>
