--- a/app/src/main/res/layout/layout_main.xml
+++ b/app/src/main/res/layout/layout_main.xml
@@ -28,6 +28,13 @@
 			android:layout_alignParentRight="true"
 			android:id="@+id/bugleDebugToggle"/>
 
+		<ToggleButton
+			android:layout_height="wrap_content"
+			android:layout_width="wrap_content"
+			android:layout_below="@id/bugleDebugToggle"
+			android:layout_alignParentRight="true"
+			android:id="@+id/booksTestingToggle"/>
+
 		<TextView
 			android:layout_height="wrap_content"
 			android:layout_width="wrap_content"
@@ -55,6 +62,16 @@
 			android:layout_toLeftOf="@id/bugleDebugToggle"
 			android:layout_alignTop="@id/bugleDebugToggle"
 			android:layout_alignBottom="@id/bugleDebugToggle"
+			android:layout_alignParentLeft="true"
+			android:gravity="center"/>
+
+		<TextView
+			android:layout_height="wrap_content"
+			android:layout_width="wrap_content"
+			android:text="Play Books Testing UI"
+			android:layout_toLeftOf="@id/booksTestingToggle"
+			android:layout_alignBottom="@id/booksTestingToggle"
+			android:layout_alignTop="@id/booksTestingToggle"
 			android:layout_alignParentLeft="true"
 			android:gravity="center"/>
 
